--- a/app/src/main/res/layout/activity_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_nav_drawer.xml
@@ -17,10 +17,10 @@
     <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_nav_drawer"
             app:menu="@menu/activity_nav_drawer_drawer" android:hapticFeedbackEnabled="true"
-            android:layout_gravity="left"/>
+            android:layout_gravity="left" android:paddingTop="60dp"/>
 
 </android.support.v4.widget.DrawerLayout>
