--- a/app/src/main/res/layout/activity_questionnaire_menu.xml
+++ b/app/src/main/res/layout/activity_questionnaire_menu.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="uk.ucl.group21.currentviewapp.QuestionnaireMenu">
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
 
-    <Button
+    <include
+            layout="@layout/app_bar_nav_drawer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    <include
+            layout="@layout/activity_questionnaire_menu_screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Next"
-            android:id="@+id/next"
-            android:onClick="nextButton"
-            android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Back"
-            android:id="@+id/back"
-            android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/next"/>
-</RelativeLayout>
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header_nav_drawer"
+            app:menu="@menu/activity_nav_drawer_drawer"/>
+
+</android.support.v4.widget.DrawerLayout>
