--- a/app/src/main/res/layout/activity_dashboard_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_screen.xml
@@ -55,6 +55,13 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:layout_above="@+id/previousQuestionnairesButton" android:layout_centerHorizontal="true"
+            android:layout_marginBottom="15dp" android:id="@+id/editText" android:hint="enter some text"/>
 
 </RelativeLayout>
 
